--- a/config/settings.json
+++ b/config/settings.json
@@ -1,23 +1,23 @@
 {
-  "SiteName": "iBlog",
-  "Author": "You Name",
-  "Email": "you_email@xxx.com",
-  "SiteDomain": "www.example.com",
+  "SiteName": "mpcBlog",
+  "Author": "wwb",
+  "Email": "153634555@qq.com",
+  "SiteDomain": "",
   "RecordNo": "浙ICP备XXX号",
   "LogoPath": "/static/images/zhr.jpg",
   "PageSize": "10",
   "ExpandMenu": "true",
-  "ShowArticleSign": "true",
+  "ShowArticleSign": "false",
   "Editor": "",
   "CacheExpired": "300",
   "TranslateKey": "y2RIaF6RifHnJeD1Szzw",
-  "EnableStatistics": "true",
+  "EnableStatistics": "false",
   "StatisticsId": "646bc927e37fe4c5c0e6e7c2d37fcb2c",
-  "EnableShare": "true",
+  "EnableShare": "false",
   "JiaThisId": "",
   "ShowComments": "true",
   "ShowGuestbook": "true",
-  "ChangyanId": "cyrUoGjWj",
-  "ChangyanConf": "prod_c77d5188bc137c8d9181720d02506ab6",
+  "ChangyanId": "cytVsCxyo",
+  "ChangyanConf": "c98fba06f9deb2ca032da7b9804089d3",
   "CodeTheme": ""
 }
