--- a/config/settings.json
+++ b/config/settings.json
@@ -3,7 +3,7 @@
   "Author": "wwb",
   "Email": "153634555@qq.com",
   "SiteDomain": "",
-  "RecordNo": "浙ICP备XXX号",
+  "RecordNo": "浙ICP备18039886号-1",
   "LogoPath": "/static/images/zhr.jpg",
   "PageSize": "10",
   "ExpandMenu": "true",
